Fix scrollbar on long sidebar (#170)
Fix scrollbar on long sidebar

closes #144

--- a/otcdocstheme/theme/otcdocs/static/css/otcdocstheme.css
+++ b/otcdocstheme/theme/otcdocs/static/css/otcdocstheme.css
@@ -636,7 +636,6 @@ bold.service-doc-title {
   .docs-sidebar-toc {
     position: sticky;
     top: 10px;
-    height: calc(100vh);
     display: block !important;
     overflow-y: auto;
   }
